--- a/app/templates/blog/includes/post_card.html
+++ b/app/templates/blog/includes/post_card.html
@@ -2,7 +2,7 @@
 
 <div class="artist__item {% if not on_home %}msry__item {% endif %}">
     <div class="artist__item__inner">
-        <a href="{% url 'blog_post_detail' post.slug %}" class="artist__item__inner">
+        <a {% if post.content|removetags:"p"|slice:"4" == 'http' %}href="{{ post.content|removetags:'p' }}" target="_blank"{% else %}href="{% url 'blog_post_detail' post.slug %}"{% endif %} class="artist__item__inner">
             {% if post.featured_image %}
             <figure class="artist__item__img">
                 <img src="{{ MEDIA_URL }}{% thumbnail post.featured_image 500 0 %}" alt="Article: {{ post.title }}">
