--- a/app/static/src/sass/modules/navs/_nav-header.scss
+++ b/app/static/src/sass/modules/navs/_nav-header.scss
@@ -17,8 +17,6 @@ $module: ".nav-header";
         vertical-align: top;
         position: relative;
 
-        @include padding-right(.5);
-
         &:after {
             content: "";
             display: block;
@@ -27,7 +25,7 @@ $module: ".nav-header";
             background: black;
             position: absolute;
             top: 0;
-            right: 0;
+            right: -1px;
 
             @include margin-left(.5);
         }
@@ -41,15 +39,47 @@ $module: ".nav-header";
         &--image {
             vertical-align: top;
             @include margin(0 0 0 .5);
+            @include padding-right(.5);
+
+            @include mq($until: md) {
+                @include margin(0 0 0 .25);
+                @include padding-right(.25);
+            }
         }
 
         &--special {
             vertical-align: top;
             @include margin(0 0 0 .5);
+            @include padding-right(.5);
+
+            @include mq($until: md) {
+                @include margin(0 0 0 .25);
+                @include padding-right(.25);
+            }
         }
 
         &--centered {
             line-height: $header-height;
+        }
+
+        &.hover {
+            &:before {
+                content: "";
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 1px;
+                right: 0;
+                bottom: -1px;
+                z-index: 3;
+
+                background: #F8F8F8;
+                border-top: 1px solid #E3E3E3;
+                border-left: 1px solid #E3E3E3;
+                border-right: 1px solid #E3E3E3;
+                border-bottom: 1px solid #F8F8F8;
+            }
+
         }
 
     }
@@ -58,17 +88,93 @@ $module: ".nav-header";
 
         color: inherit;
         text-decoration: none;
-
+        position: relative;
+        z-index: 4;
         vertical-align: top;
 
         @include font-size(xl);
         @include line-height($header-pre-height);
         @include typeface(sans-serif);
 
+        @include padding-right(.5);
+
+        @include mq($until: md) {
+            @include margin(0 0 0 .25);
+            @include padding-right(.25);
+        }
+
+        @include mq($until: lg) {
+            @include font-size(l);
+        }
+
         &:before {
             display: inline;
             content: '.';
             vertical-align: top;
+        }
+
+        &.active {
+            &:after {
+                position: absolute;
+                height: 40%;
+                display: block;
+                top: 30%;
+                left: 1px;
+                content: "";
+                background: #F8E71C;
+                z-index: -1;
+                right: 0px;
+            }
+        }
+
+    }
+
+    &__submenu {
+
+        position: absolute;
+        top: $header-pre-height;
+        z-index: 2;
+        background: white;
+        display: none;
+        background-color: #F8F8F8;
+        border: 1px solid #E3E3E3;
+        text-align: left;
+
+        @include padding(2);
+
+        @include box-shadow(0px 30px 20px 0px rgba(0,0,0,0.12));
+
+        p {
+
+            @include font-size(s);
+            @include typeface(serif);
+            font-weight: weight(light);
+
+            &:after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: 1px;
+                background: #979797;
+
+                @include margin-top(1);
+            }
+
+        }
+
+    }
+
+    &__item-sub {
+
+        @include font-size(s);
+        @include typeface(sans-serif);
+        font-weight: weight(regular);
+
+        &--first {
+
+            @include font-size(l);
+            @include margin-bottom(.5);
+
         }
 
     }
