--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 </head>
 
 <body id="{% block body_id %}body{% endblock %}">
-
+    {% spaceless %}
     <div class="banner" role="banner">
         <div class="header">
             <div class="container">
@@ -116,13 +116,13 @@
 
                 <div class="row">
 
-                    <div class="col-lg-6 col-lg-push-1">
+                    <div class="col-sm-6 col-sm-push-1 tal-sm tac-sm tal-xs">
 
                         newsletter
 
                     </div>
 
-                    <div class="col-lg-3 col-lg-push-1 tac">
+                    <div class="col-sm-3 col-sm-push-1 tac-sm tal-xs">
 
                         <a class="footer__follow-link facebook" href="https://www.facebook.com/iIRCAM/" target="_blank" title="{% trans 'Follow us on Facebook' %}"><i class="fa fa-facebook-square"></i></a>
                         <a class="footer__follow-link twitter" href="https://twitter.com/ircam" target="_blank" title="{% trans 'Follow us on Twitter' %}"><i class="fa fa-twitter-square"></i></a>
@@ -144,13 +144,13 @@
 
                 <div class="row">
 
-                    <div class="col-lg-3 col-lg-push-1">
+                    <div class="col-xs-3 col-sm-3 col-sm-push-1 tal">
 
                         <a href="{% url "home" %}" title="{% trans 'Home' %}"><img src="{% static "img/logo-ircam-white.png" %}" width="151" /></a>
 
                     </div>
 
-                    <div class="col-lg-2 col-lg-push-1 tar">
+                    <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
 
                         <strong>IRCAM</strong><br />
                         <br />
@@ -160,7 +160,7 @@
 
                     </div>
 
-                    <div class="col-lg-2 col-lg-push-1 tar">
+                    <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
 
                         <strong>{% trans 'Opening times' %}</strong><br />
                         <br />
@@ -170,7 +170,7 @@
 
                     </div>
 
-                    <div class="col-lg-2 col-lg-push-1 tar">
+                    <div class="col-xs-3 col-sm-2 col-sm-push-1 tar-sm tal">
 
                         <strong>{% trans 'Subway access' %}</strong><br />
                         <br />
@@ -183,7 +183,7 @@
 
                 <div class="row">
 
-                    <div class="col-lg-10 col-lg-push-1">
+                    <div class="col-sm-10 col-sm-push-1">
 
                         <div class="footer__separator"></div>
 
@@ -193,24 +193,24 @@
 
                 <div class="row">
 
-                    <div class="col-lg-3 col-lg-push-1">
+                    <div class="col-xs-4 col-sm-3 col-sm-push-1 tal">
 
                         {% page_menu "pages/menus/footer.html" %}
 
                     </div>
 
-                    <div class="col-lg-5 col-lg-push-1">
+                    <div class="col-xs-4 col-sm-5 col-sm-push-1 tal">
 
                         <strong>Institut de Recherche et Coordination Acoustique/Musique</strong> {% trans 'under the tutelage of' %} :<br />
                         <br />
-                        <a href="http://www.culturecommunication.gouv.fr/" target="_blank" title="Ministère de la Culture et de la Communication"><img width="120" height="66" src="{% static "img/partners/logo-ministere-culture.png" %}" /></a>
-                        <a href="http://www.cnrs.fr/" target="_blank" title="Centre National de la Recherche Scientifique"><img width="120" height="66" src="{% static "img/partners/logo-cnrs.png" %}" /></a>
-                        <a href="http://www.upmc.fr/" target="_blank" title="Université Pierre et Marie Curie"><img width="120" height="66" src="{% static "img/partners/logo-upmc.png" %}" /></a>
-                        <a href="http://www.inria.fr/" target="_blank" title="Inria"><img width="120" height="66" src="{% static "img/partners/logo-inria.png" %}" /></a>
+                        <a href="http://www.culturecommunication.gouv.fr/" target="_blank" title="Ministère de la Culture et de la Communication"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-ministere-culture.png" %}" /></a>
+                        <a href="http://www.cnrs.fr/" target="_blank" title="Centre National de la Recherche Scientifique"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-cnrs.png" %}" /></a>
+                        <a href="http://www.upmc.fr/" target="_blank" title="Université Pierre et Marie Curie"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-upmc.png" %}" /></a>
+                        <a href="http://www.inria.fr/" target="_blank" title="Inria"><img class="footer__partner" width="120" height="66" src="{% static "img/partners/logo-inria.png" %}" /></a>
 
                     </div>
 
-                    <div class="col-lg-2 col-lg-push-1">
+                    <div class="col-xs-4 col-sm-2 col-sm-push-1 tal">
 
                         {% trans 'go to' %} :
                         <ul class="unstyled-list">
@@ -228,7 +228,7 @@
 
                 <div class="row">
 
-                    <div class="col-lg-10 col-lg-push-1">
+                    <div class="col-sm-10 col-sm-push-1">
 
                         <div class="footer__separator footer__seprator--small"></div>
 
@@ -243,8 +243,8 @@
     </footer>
 
     {% include "includes/search_form.html" %}
-
     {% include "includes/footer_scripts.html" %}
+    {% endspaceless %}
 
 </body>
 <script>
